[package]
name = "mandelbrot-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "0.18"
ndarray = "0.15.0"
image = "0.21"
flume = "0.11.0"
bytemuck = { version = "1.14", features = ["derive"] }
